Setting_up_DB_Connections

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "LocalDBConnection": "Server=localhost,1433;Database=Restaurant;User Id=sa;Password=Pass.Word;TrustServerCertificate=true"
+    "LocalDBConnection": "Server=localhost,1433;Database=Restaurant;User Id=sa;Password=Pass.Word;TrustServerCertificate=true",
+    "DavidHomeDBConnection": "Server=localhost\\SQLEXPRESS;Database=Restaurant;User Id=sa;Password=Pass.Word;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
