--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Settings": {
+    "Secret": "d4f.5E6a7-8b9c-0d1e-WfGl1m-4h5i6j7k8l9m",
+    "ValidAudiences": [ "https://localhost:44359", "https://localhost:49153" ],
+    "ValidAudience": "https://localhost:44359",
+    "ValidIssuer": "https://localhost:44359"
+  }
 }
