Connectie string toevoegen laptop david

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "LocalDBConnection": "Server=localhost,1433;Database=Restaurant;User Id=sa;Password=Pass.Word;TrustServerCertificate=true",
-    "DavidHomeDBConnection": "Server=localhost\\SQLEXPRESS;Database=Restaurant;User Id=sa;Password=Pass.Word;TrustServerCertificate=True"
+    "DavidHomeDBConnection": "Server=localhost\\SQLEXPRESS;Database=Restaurant;User Id=sa;Password=Pass.Word;TrustServerCertificate=True",
+    "DavidLaptopDBConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Restaurant;User Id=sa;Password=Pass.Word;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
