--- a/Restaurant.csproj
+++ b/Restaurant.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TesterProject\**" />
+    <Content Remove="TesterProject\**" />
+    <EmbeddedResource Remove="TesterProject\**" />
+    <None Remove="TesterProject\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.19" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
