changed Unit testing for account and set up start for E2E testing (wip)

--- a/Restaurant.csproj
+++ b/Restaurant.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="RestaurantTesting" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="TesterProject\**" />
     <Content Remove="TesterProject\**" />
     <EmbeddedResource Remove="TesterProject\**" />
@@ -23,6 +27,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.19" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.19" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.19">
       <PrivateAssets>all</PrivateAssets>
